--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "popper.js": "^1.15.0"
   },
   "devDependencies": {
+    "webpack": "^4.39.1",
+    "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.0"
   }
 }
